<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_language"
        android:title="@string/menu_language"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_file_structure"
        android:title="@string/file_structure"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_storage_info"
        android:title="@string/storage_location"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_diagnostic"
        android:title="Диагностика файлов"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        app:showAsAction="never" />
</menu>